--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         </div>
         <div class="nav-wrapper">
           <ul>
-            <li><a href="#">HOME</a></li>
-            <li><a href="#">ABOUT</a></li>
-            <li><a href="#">INSTALL</a></li>
+            <li><a href="/index.html">HOME</a></li>
+            <li><a href="/virus/about.html">ABOUT</a></li>
+            <li><a href="/install/en-us.html">INSTALL</a></li>
             </ul>
         </div>
       </nav>
