--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ body {
   height: 100vh;
   font-family: tahoma;
   font-weight: 400px;
-  background: url(https://images.pexels.com/photos/509922/pexels-photo-509922.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260);
+  background: url(https://serving.photos.photobox.com/81663992dd9312ab91ca612113c1a57a194607874cb7a54e62daa4fc33c5cb5f9ab6f64c.jpg);
   background-position: center;
   background-size: cover;
   
