--- a/virus/about.html
+++ b/virus/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width", initial-scale=1.0>
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>VIRUS.TK - HOME</title>
+    <title>VIRUS.TK - ABOUT</title>
     <link rel="stylesheet" href=".css">
   </head>
   <body>
@@ -51,6 +51,18 @@ html {
   padding: 0;
   width: 100%;
   height: 100vh;
+  
+}
+  
+  
+body {
+  
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100vh;
+  font-family: tahoma;
+  font-weight: 400px;
   
 }
 
