--- a/virus/about.html
+++ b/virus/about.html
@@ -280,4 +280,4 @@ Home of the virus
       </center>
     </div>
 
-  <button href="install">Yes</button>
+  <button href="/install/virus/us-en/install">Yes</button>
