--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 
-// HEY YOU! WHY ARE YOU LOOKING AT THE PAGE SOURCE!! GET OUTTA HERE!!
+## HEY YOU! WHY ARE YOU LOOKING AT THE PAGE SOURCE!! GET OUTTA HERE!!
 
 
 
