--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
 
 
+
 <!DOCTYPE hmtl>
 <html lang="en">
   <head>
@@ -70,7 +71,7 @@ body {
   height: 100vh;
   font-family: tahoma;
   font-weight: 400px;
-  background: url(https://serving.photos.photobox.com/81663992dd9312ab91ca612113c1a57a194607874cb7a54e62daa4fc33c5cb5f9ab6f64c.jpg);
+  background: url(https://i.ibb.co/r6Mxyc8/image.jpg);
   background-position: center;
   background-size: cover;
   
