--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ body {
   height: 100vh;
   font-family: tahoma;
   font-weight: 400px;
-  background: url(https://i.ibb.co/r6Mxyc8/image.jpg);
+  background: url(https://i.ibb.co/gRWpfR0/Untitled.jpg);
   background-position: center;
   background-size: cover;
   
