--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ body {
   padding: 0;
   width: 100%;
   height: 100vh;
-  font-family: tahoma;
+  font-family: Arial;
   font-weight: 400px;
   background: url(https://i.ibb.co/gRWpfR0/Untitled.jpg);
   background-position: center;
