--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width", initial-scale=1.0>
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>virus.tk - home</title>
+    <title>life - home</title>
 <link rel="shortcut icon" href="https://i.ibb.co/RDmHVxX/Untitled-4.png" type="image/x-icon"/>
     <link rel="stylesheet" href=".css">
   </head>
@@ -26,13 +26,13 @@
           <i></i>
         </label>
         <div class="logo">
-          <a href="#">VIRUS.TK</a>
+          <a href="#">LIFE</a>
         </div>
         <div class="nav-wrapper">
           <ul>
             <li><a href="/index.html">HOME</a></li>
-            <li><a href="/virus/about.html">ABOUT</a></li>
-            <li><a href="/install/en-us.html">INSTALL</a></li>
+            <li><a href="/about/en-us.html">ABOUT</a></li>
+            <li><a href="/support/en-us.html">SUPPORT</a></li>
             </ul>
         </div>
       </nav>
