--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="viewport" content="width=device-width", initial-scale=1.0>
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>life - home</title>
-<link rel="shortcut icon" href="https://i.ibb.co/9rwbNmS/image.png" type="image/x-icon"/>
+<link rel="shortcut icon" href="https://i.ibb.co/BsVFvh5/image-1.png" type="image/x-icon"/>
     <link rel="stylesheet" href=".css">
   </head>
   <body>
