--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="nav-wrapper">
           <ul>
             <li><a href="/index.html">HOME</a></li>
-            <li><a href="/about/en-us.html">ABOUT</a></li>
+            <li><a href="/about/en-us.html">LIFE %</a></li>
             <li><a href="/support/en-us.html">SUPPORT</a></li>
             </ul>
         </div>
