--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <link rel="shortcut icon" href="https://i.ibb.co/BsVFvh5/image-1.png" type="image/x-icon"/>
     <link rel="stylesheet" href=".css">
   </head>
+  <script async src="https://arc.io/widget.js#t2A6cMXX"></script>
   <body>
     <div class="container">
       <nav>
