--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
         </div>
         <div class="nav-wrapper">
           <ul>
-            <li><a href="/index.html">HOME</a></li>
-            <li><a href="/about/en-us.html">LIFE %</a></li>
-            <li><a href="/support/en-us.html">SUPPORT</a></li>
+            <li><a href="/index.html">home</a></li>
+            <li><a href="/schedule/en-us.html">schedule</a></li>
+            <li><a href="/stream/en-us.html">stream</a></li>
             </ul>
         </div>
       </nav>
