--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
         </div>
         <div class="nav-wrapper">
           <ul>
-            <li><a href="/index.html">home</a></li>
-            <li><a href="/schedule/en-us.html">schedule</a></li>
-            <li><a href="/stream/en-us.html">stream</a></li>
+            <li><a href="/index.html">clients</a></li>
+            <li><a href="/schedule/en-us.html">configs</a></li>
+            <li><a href="/stream/en-us.html">login</a></li>
             </ul>
         </div>
       </nav>
@@ -72,7 +72,7 @@ body {
   height: 100vh;
   font-family: Arial;
   font-weight: 400px;
-  background: url(https://i.ibb.co/gRWpfR0/Untitled.jpg);
+  background: url(https://i.ibb.co/pZps5qd/image-59.png);
   background-position: center;
   background-size: cover;
   
