--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <i></i>
         </label>
         <div class="logo">
-          <a href="#">L I F E</a>
+          <a href="#">Xyro</a>
         </div>
         <div class="nav-wrapper">
           <ul>
